--- a/templates/dashboard/home.html
+++ b/templates/dashboard/home.html
@@ -10,7 +10,7 @@
         {%if request.user.is_authenticated%}
        <form class="row gy-2 gx-3 align-items-center">
             <div class="col-md-4">
-                <input type="text" id="myInput" class="form-control" value="http://127.0.0.1:8000/add-anon-message/{{request.user.username}}">
+                <input type="text" id="myInput" class="form-control" value="https://django-shadow-send.vercel.app/add-anon-message/{{request.user.username}}">
             </div>
             <div class="col-auto">
                 <button onclick="myFunction()" type="submit" class="btn btn-primary">Copy Link</button>
